# OkGo

./: .gitmodules
OkGo 2/firmware/: .gitignore
OkGo 2/firmware/common/: Cargo.toml  build.rs
OkGo 2/firmware/common/src/: adc.rs  hmac_mod.rs  key.rs  lib.rs  rfm.rs  utils.rs
OkGo 2/firmware/control/src/legacy/: control.c
OkGo 2/firmware/f0/src/: adc.rs  dac.rs  gpio.rs  lib.rs  out.rs
OkGo 2/firmware/ignition/: Cargo.toml  build.rs  stm32f0.json
OkGo 2/firmware/ignition/src/: beep.rs  ignition.rs  io.rs  main.rs  radio.rs
OkGo 2/firmware/ignition/src/legacy/: ignition.c  ignition_pins.c  ignition_radio.c
OkGo 2/firmware/libopencm3-sys/src/: lib.rs
OkGo2/firmware/: .gitignore
OkGo2/firmware/common/: Cargo.toml  build.rs
OkGo2/firmware/common/src/: adc.rs  hmac_mod.rs  key.rs  lib.rs  md5.rs  md5_helpers.rs  radio_reg.rs  radio_reg.svd  rfm.rs  utils.rs
OkGo2/firmware/common/src/legacy/: rfm95w.c
OkGo2/firmware/control/: Cargo.toml  build.rs
OkGo2/firmware/control/.cargo/: config
OkGo2/firmware/control/src/: control.rs  io.rs  lcd.rs  main.rs  radio.rs  splash.rs
OkGo2/firmware/f0/: Cargo.toml
OkGo2/firmware/f0/src/: adc.rs  dac.rs  gpio.rs  input.rs  lib.rs  out.rs  output.rs  spi.rs
OkGo2/firmware/ignition/: Cargo.toml  Xargo.toml  libopencm3_stm32f0.ld  memory.x  thumbv6m-none-eabi.json
OkGo2/firmware/ignition/.cargo/: config
OkGo2/firmware/ignition/src/: beep.rs  beeper.rs  board.rs  hal.rs  ignition.rs  io.rs  main.rs  output_pin_ext.rs  radio.rs  utils.rs
OkGo2/firmware/libopencm3-sys/: Cargo.toml  build.rs
OkGo2/firmware/libopencm3-sys/src/: lib.rs
OkGo2/firmware/stm32f0xx/: Cargo.toml
