[package]
name = "control"
version = "0.1.0"
authors = [
  "David Turner <cillian64@googlemail.com>",
  "David Wood <devel@dtwood.uk>"
]

[dependencies]
bare-metal = "*"
firmware_common = { path = "../common" }
hmac = "*"
libopencm3-sys = { path = "../libopencm3-sys" }
md-5 = "*"
nb = "*"
rlibc = "*"
stm32f0xx = { git = "https://github.com/dtwood/stm32f0xx" }
stm32f0xx-hal = { git = "https://github.com/dtwood/stm32f0xx-hal" }
