[package]
name = "ignition"
version = "0.1.0"
authors = [
  "David Turner <cillian64@googlemail.com>",
  "David Wood <devel@dtwood.uk>"
]

[dependencies]
bare-metal = "*"
cortex-m-rt = { version = "*", features = ["abort-on-panic"] }
cortex-m-rtfm = "*"
f0 = { path = "../f0" }
firmware_common = { path = "../common" }
hmac = "*"
md-5 = "*"
nb = { git = "https://github.com/japaric/nb.git" }
stm32f0xx = { path = "../stm32f0xx", features = ["rt"] }

[build-dependencies]
gcc = "*"
