[package]
name = "ignition"
version = "0.1.0"
authors = [
  "David Turner <cillian64@googlemail.com>",
  "David Wood <devel@dtwood.uk>"
]

[dependencies]
bare-metal = "*"
cortex-m-rt = { version = "*", features = ["abort-on-panic"] }
cortex-m-rtfm = "*"
embedded-hal = "*"
firmware_common = { path = "../common" }
hmac = "*"
md-5 = "*"
nb = { git = "https://github.com/japaric/nb.git" }
rfm95w = { git = "https://github.com/dtwood/rfm95w" }
stm32f0xx = { git = "https://github.com/dtwood/stm32f0xx", features = ["rt"] }
stm32f0xx-hal = { git = "https://github.com/dtwood/stm32f0xx-hal" }
